Codacy flagged issue:  use valueOf instead of instantiating an Integer